--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Um projeto que tem como objetivor criar um clone do <a href=\"https://www.tabnews.com.br\">TabNews</a> para fins de estudo e melhora na minha capacidade como desenvolvedor\r O projeto é ideia do Filipe Deschamps usando a sua plataforma <a href=\"https://www.curso.dev\">curso.dev</a> para trazer passo a passo da criação desse projeto",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT",
